// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated style shape snapshots > osm colorful (dark) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-education",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-construction",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "fill:building:outline",
    "fill:building",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-minor:outline",
    "line:tunnel-street-bus:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-arterial-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-minor",
    "line:tunnel-street-bus",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-minor-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-arterial-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-minorrail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-minorrail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-pedestrian-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-country-disputed:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > osm colorful (light) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-education",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-construction",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "fill:building:outline",
    "fill:building",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-minor:outline",
    "line:tunnel-street-bus:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-arterial-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-minor",
    "line:tunnel-street-bus",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-minor-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-arterial-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-minorrail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-minorrail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-pedestrian-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-country-disputed:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > osm colorful with terrain + hillshade + extruded buildings 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": true,
  "layers": [
    "background:background",
    "background:slot-below-fills",
    "fill:water-ocean",
    "fill:land-glacier",
    "fill:land-commercial",
    "fill:land-industrial",
    "fill:land-residential",
    "fill:land-agriculture",
    "fill:land-waste",
    "fill:land-park",
    "fill:land-garden",
    "fill:land-burial",
    "fill:land-leisure",
    "fill:land-rock",
    "fill:land-forest",
    "fill:land-grass",
    "fill:land-vegetation",
    "fill:land-sand",
    "fill:land-wetland",
    "fill:site-dangerarea",
    "fill:site-sportscentre",
    "fill:site-education",
    "fill:site-hospital",
    "fill:site-prison",
    "fill:site-parking",
    "fill:site-construction",
    "hillshade:hillshade",
    "line:water-river",
    "line:water-canal",
    "line:water-stream",
    "line:water-ditch",
    "fill:water-area",
    "fill:water-area-river",
    "fill:water-area-small",
    "fill:water-dam-area",
    "line:water-dam",
    "fill:water-pier-area",
    "line:water-pier",
    "fill:airport-area",
    "line:airport-taxiway:outline",
    "line:airport-runway:outline",
    "line:airport-taxiway",
    "line:airport-runway",
    "background:slot-below-streets",
    "fill:tunnel-street-pedestrian-zone",
    "line:tunnel-street-track:outline",
    "line:tunnel-street-pedestrian:outline",
    "line:tunnel-street-service:outline",
    "line:tunnel-street-livingstreet:outline",
    "line:tunnel-street-minor:outline",
    "line:tunnel-street-bus:outline",
    "line:tunnel-street-tertiary-link:outline",
    "line:tunnel-street-arterial-link:outline",
    "line:tunnel-street-trunk-link:outline",
    "line:tunnel-street-motorway-link:outline",
    "line:tunnel-street-tertiary:outline",
    "line:tunnel-street-secondary:outline",
    "line:tunnel-street-primary:outline",
    "line:tunnel-street-trunk:outline",
    "line:tunnel-street-motorway:outline",
    "line:tunnel-way-footway",
    "line:tunnel-way-steps",
    "line:tunnel-way-path",
    "line:tunnel-way-cycleway",
    "line:tunnel-street-track",
    "line:tunnel-street-pedestrian",
    "line:tunnel-street-service",
    "line:tunnel-street-livingstreet",
    "line:tunnel-street-minor",
    "line:tunnel-street-bus",
    "line:tunnel-street-pedestrian-bicycle",
    "line:tunnel-street-minor-bicycle",
    "line:tunnel-street-tertiary-link",
    "line:tunnel-street-arterial-link",
    "line:tunnel-street-trunk-link",
    "line:tunnel-street-motorway-link",
    "line:tunnel-street-tertiary",
    "line:tunnel-street-secondary",
    "line:tunnel-street-primary",
    "line:tunnel-street-trunk",
    "line:tunnel-street-motorway",
    "line:tunnel-transport-rail:outline",
    "line:tunnel-transport-rail-service:outline",
    "line:tunnel-transport-subway:outline",
    "line:tunnel-transport-minorrail:outline",
    "line:tunnel-transport-rail",
    "line:tunnel-transport-rail-service",
    "line:tunnel-transport-subway",
    "line:tunnel-transport-minorrail",
    "fill:bridge",
    "fill:street-pedestrian-zone",
    "line:street-track:outline",
    "line:street-pedestrian:outline",
    "line:street-service:outline",
    "line:street-livingstreet:outline",
    "line:street-minor:outline",
    "line:street-bus:outline",
    "line:street-tertiary-link:outline",
    "line:street-arterial-link:outline",
    "line:street-trunk-link:outline",
    "line:street-motorway-link:outline",
    "line:street-tertiary:outline",
    "line:street-secondary:outline",
    "line:street-primary:outline",
    "line:street-trunk:outline",
    "line:street-motorway:outline",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-pedestrian-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-subway:outline",
    "line:transport-minorrail:outline",
    "line:aerialway:outline",
    "line:transport-rail",
    "line:transport-rail-service",
    "line:transport-subway",
    "line:transport-minorrail",
    "line:aerialway",
    "line:transport-ferry",
    "line:bridge-way-footway:bridge",
    "line:bridge-way-steps:bridge",
    "line:bridge-way-paths:bridge",
    "line:bridge-street-track:bridge",
    "line:bridge-street-pedestrian:bridge",
    "line:bridge-street-service:bridge",
    "line:bridge-street-minor:bridge",
    "line:bridge-street-tertiary-link:bridge",
    "line:bridge-street-arterial-link:bridge",
    "line:bridge-street-trunk-link:bridge",
    "line:bridge-street-motorway-link:bridge",
    "line:bridge-street-tertiary:bridge",
    "line:bridge-street-secondary:bridge",
    "line:bridge-street-primary:bridge",
    "line:bridge-street-trunk:bridge",
    "line:bridge-street-motorway:bridge",
    "fill:bridge-street-pedestrian-zone",
    "line:bridge-street-track:outline",
    "line:bridge-street-pedestrian:outline",
    "line:bridge-street-service:outline",
    "line:bridge-street-livingstreet:outline",
    "line:bridge-street-minor:outline",
    "line:bridge-street-bus:outline",
    "line:bridge-street-tertiary-link:outline",
    "line:bridge-street-arterial-link:outline",
    "line:bridge-street-trunk-link:outline",
    "line:bridge-street-motorway-link:outline",
    "line:bridge-street-tertiary:outline",
    "line:bridge-street-secondary:outline",
    "line:bridge-street-primary:outline",
    "line:bridge-street-trunk:outline",
    "line:bridge-street-motorway:outline",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail:outline",
    "line:bridge-transport-rail",
    "line:bridge-transport-rail-service",
    "line:bridge-transport-subway",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country:outline",
    "line:boundary-country-disputed:outline",
    "line:boundary-state:outline",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
    "fill-extrusion:building-3d",
  ],
  "sources": [
    "elevation",
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > satellite raster-only (no overlay) 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-raster",
    "raster:satellite",
    "background:slot-below-symbols",
    "background:slot-below-labels",
  ],
  "sources": [
    "satellite",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > satellite with toner overlay 1`] = `
{
  "hasLight": false,
  "hasSky": true,
  "hasTerrain": false,
  "layers": [
    "background:background",
    "background:slot-below-raster",
    "raster:satellite",
    "background:slot-below-streets",
    "line:way-footway",
    "line:way-steps",
    "line:way-path",
    "line:way-cycleway",
    "line:street-track",
    "line:street-pedestrian",
    "line:street-service",
    "line:street-livingstreet",
    "line:street-minor",
    "line:street-bus",
    "line:street-pedestrian-bicycle",
    "line:street-minor-bicycle",
    "line:street-tertiary-link",
    "line:street-arterial-link",
    "line:street-trunk-link",
    "line:street-motorway-link",
    "line:street-tertiary",
    "line:street-secondary",
    "line:street-primary",
    "line:street-trunk",
    "line:street-motorway",
    "line:transport-rail:outline",
    "line:transport-rail-service:outline",
    "line:transport-subway:outline",
    "line:aerialway:outline",
    "line:transport-minorrail",
    "line:transport-ferry",
    "line:bridge-way-footway",
    "line:bridge-way-steps",
    "line:bridge-way-path",
    "line:bridge-way-cycleway",
    "line:bridge-street-track",
    "line:bridge-street-pedestrian",
    "line:bridge-street-service",
    "line:bridge-street-livingstreet",
    "line:bridge-street-minor",
    "line:bridge-street-bus",
    "line:bridge-street-pedestrian-bicycle",
    "line:bridge-street-minor-bicycle",
    "line:bridge-street-tertiary-link",
    "line:bridge-street-arterial-link",
    "line:bridge-street-trunk-link",
    "line:bridge-street-motorway-link",
    "line:bridge-street-tertiary",
    "line:bridge-street-secondary",
    "line:bridge-street-primary",
    "line:bridge-street-trunk",
    "line:bridge-street-motorway",
    "line:bridge-transport-rail:outline",
    "line:bridge-transport-rail-service:outline",
    "line:bridge-transport-subway:outline",
    "line:bridge-transport-minorrail",
    "background:slot-below-symbols",
    "line:boundary-country",
    "line:boundary-country-disputed",
    "line:boundary-state",
    "line:boundary-country-maritime",
    "symbol:label-address-housenumber",
    "symbol:marking-oneway",
    "symbol:marking-oneway-reverse",
    "symbol:poi-amenity",
    "symbol:poi-leisure",
    "symbol:poi-tourism",
    "symbol:poi-shop",
    "symbol:poi-man_made",
    "symbol:poi-historic",
    "symbol:poi-emergency",
    "symbol:poi-highway",
    "symbol:poi-office",
    "background:slot-below-labels",
    "symbol:label-motorway-exit",
    "symbol:label-motorway-shield",
    "symbol:label-street-track",
    "symbol:label-street-pedestrian",
    "symbol:label-street-livingstreet",
    "symbol:label-street-residential",
    "symbol:label-street-unclassified",
    "symbol:label-street-tertiary",
    "symbol:label-street-secondary",
    "symbol:label-street-primary",
    "symbol:label-street-trunk",
    "symbol:label-street-pedestrian-zone",
    "symbol:label-water-area-major",
    "symbol:label-water-area-large",
    "symbol:label-water-area-medium",
    "symbol:label-water-area-small",
    "symbol:label-water-river",
    "symbol:label-water-stream",
    "symbol:symbol-transit-bus",
    "symbol:symbol-transit-tram",
    "symbol:symbol-transit-station",
    "symbol:symbol-transit-airfield",
    "symbol:symbol-transit-airport",
    "symbol:label-place-neighbourhood",
    "symbol:label-place-quarter",
    "symbol:label-place-suburb",
    "symbol:label-place-hamlet",
    "symbol:label-place-village",
    "symbol:label-place-town",
    "symbol:label-boundary-state",
    "symbol:label-place-city",
    "symbol:label-place-statecapital",
    "symbol:label-place-capital",
    "symbol:label-boundary-country-small",
    "symbol:label-boundary-country-medium",
    "symbol:label-boundary-country-large",
  ],
  "sources": [
    "satellite",
    "versatiles-shortbread",
  ],
  "version": 8,
}
`;

exports[`generated style shape snapshots > variant layer counts 1`] = `
{
  "colorful-dark-terrain/de": 258,
  "colorful-dark-terrain/en": 258,
  "colorful-dark-terrain/style": 258,
  "colorful-dark/de": 257,
  "colorful-dark/en": 257,
  "colorful-dark/nolabel": 225,
  "colorful-dark/style": 257,
  "colorful-terrain/de": 258,
  "colorful-terrain/en": 258,
  "colorful-terrain/style": 258,
  "colorful/de": 257,
  "colorful/en": 257,
  "colorful/nolabel": 225,
  "colorful/style": 257,
  "eclipse-terrain/de": 258,
  "eclipse-terrain/en": 258,
  "eclipse-terrain/style": 258,
  "eclipse/de": 257,
  "eclipse/en": 257,
  "eclipse/nolabel": 225,
  "eclipse/style": 257,
  "empty/style": 5,
  "gray-dark-terrain/de": 258,
  "gray-dark-terrain/en": 258,
  "gray-dark-terrain/style": 258,
  "gray-dark/de": 257,
  "gray-dark/en": 257,
  "gray-dark/nolabel": 225,
  "gray-dark/style": 257,
  "gray-terrain/de": 258,
  "gray-terrain/en": 258,
  "gray-terrain/style": 258,
  "gray/de": 257,
  "gray/en": 257,
  "gray/nolabel": 225,
  "gray/style": 257,
  "graybeard-terrain/de": 258,
  "graybeard-terrain/en": 258,
  "graybeard-terrain/style": 258,
  "graybeard/de": 257,
  "graybeard/en": 257,
  "graybeard/nolabel": 225,
  "graybeard/style": 257,
  "muted-dark-terrain/de": 258,
  "muted-dark-terrain/en": 258,
  "muted-dark-terrain/style": 258,
  "muted-dark/de": 257,
  "muted-dark/en": 257,
  "muted-dark/nolabel": 225,
  "muted-dark/style": 257,
  "muted-terrain/de": 258,
  "muted-terrain/en": 258,
  "muted-terrain/style": 258,
  "muted/de": 257,
  "muted/en": 257,
  "muted/nolabel": 225,
  "muted/style": 257,
  "natural-dark-terrain/de": 258,
  "natural-dark-terrain/en": 258,
  "natural-dark-terrain/style": 258,
  "natural-dark/de": 257,
  "natural-dark/en": 257,
  "natural-dark/nolabel": 225,
  "natural-dark/style": 257,
  "natural-terrain/de": 258,
  "natural-terrain/en": 258,
  "natural-terrain/style": 258,
  "natural/de": 257,
  "natural/en": 257,
  "natural/nolabel": 225,
  "natural/style": 257,
  "neutrino-terrain/de": 258,
  "neutrino-terrain/en": 258,
  "neutrino-terrain/style": 258,
  "neutrino/de": 257,
  "neutrino/en": 257,
  "neutrino/nolabel": 225,
  "neutrino/style": 257,
  "satellite/de": 110,
  "satellite/en": 110,
  "satellite/overlay": 110,
  "satellite/style": 5,
  "shadow-terrain/de": 258,
  "shadow-terrain/en": 258,
  "shadow-terrain/style": 258,
  "shadow/de": 257,
  "shadow/en": 257,
  "shadow/nolabel": 225,
  "shadow/style": 257,
  "terrain/de": 111,
  "terrain/en": 111,
  "terrain/overlay": 111,
  "terrain/style": 6,
  "toner-dark-terrain/de": 258,
  "toner-dark-terrain/en": 258,
  "toner-dark-terrain/style": 258,
  "toner-dark/de": 257,
  "toner-dark/en": 257,
  "toner-dark/nolabel": 225,
  "toner-dark/style": 257,
  "toner-terrain/de": 258,
  "toner-terrain/en": 258,
  "toner-terrain/style": 258,
  "toner/de": 257,
  "toner/en": 257,
  "toner/nolabel": 225,
  "toner/style": 257,
}
`;
